# LetterCaseToggle

./: .gitignore  BuildDaProject.bat  CMakeLists.txt  Dependencies.cmake  README.md
Core/: CMakeLists.txt
Core/Source/Core/: Clipboard.cpp  InputSimulator.cpp  TextTransform.cpp  TextTransform.h
LetterCaseToggle/: CMakeLists.txt
LetterCaseToggle/Source/: App.cpp  App.h  AppState.cpp  AppState.h  KeyboardHook.cpp  Main.cpp  SystemHook.cpp  SystemHook.h  WinMain.cpp
